itsmeaga1n -> itspatrq, feed now includes in header from feed_meta, fix double header underline in discography, on mobile devices small change of layout in discography view

--- a/_sass/styles/_discography.scss
+++ b/_sass/styles/_discography.scss
@@ -1,24 +1,41 @@
-.discography, .post-feed {
+.discography,
+.post-feed {
     max-width: 100%;
+
     & &-album {
         display: flex;
         flex-direction: row;
         position: relative;
+
+        @include mobile {
+            flex-direction: column;
+        }
+
         &_cover {
             width: 20vw;
             height: 20vw;
             max-width: 500px;
             max-height: 500px;
+
             &-wrapper {
                 display: block;
                 margin-right: 0.5em;
+
+                @include mobile {
+                    margin: 0;
+                    width: 100%;
+                }
             }
+
             img {
                 max-height: 20vw;
             }
+
             @include mobile {
                 width: 40vw;
                 height: 40vw;
+                margin: auto;
+
                 img {
                     width: 40vw;
                     height: 40vw;
@@ -26,16 +43,20 @@
                 }
             }
         }
-        p, a {
+
+        p,
+        a {
             font-size: 0.9em;
             line-height: 1em;
             font-weight: 300;
             padding-bottom: 0.5em;
             color: $p_text;
         }
+
         a {
             @include underline-on-hover($p_text);
         }
+
         section {
             width: 100%;
         }
@@ -44,7 +65,6 @@
             margin-top: 3vw;
             font-size: 2em;
             margin-bottom: 0.6em;
-            @include underline-on-hover($p_text);
         }
 
         &_summary {
